--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>Currency</title>
-    <script src="sw/index.js" charset="utf-8"></script>
     <link rel="stylesheet" href="style/main.css">
     <link rel="stylesheet" href="style/bootstrap.min.css">
 
@@ -679,8 +678,8 @@
 <div class="row" id="toaster">
   <h4>UPDATES ARE AVAILABLE</h4>
   <div class="btn-group" >
-      <button type="button" class="btn btn-success btn-sm" name="button">REFRESH</button>
-      <button type="button" class="btn btn-warning btn-sm" name="button">DISMISS</button>
+      <button type="button" class="btn btn-success btn-sm" name="button" id="ref">REFRESH</button>
+      <button type="button" class="btn btn-warning btn-sm" name="button" id="dis">DISMISS</button>
   </div>
 
 </div>
@@ -694,6 +693,8 @@
 <!-- <script src="node_modules/es6-import/importer.js" import="./appStartScript.js"></script> -->
 
 <script src="js/main.js" charset="utf-8"></script>
+<script src="sw/index.js" charset="utf-8"></script>
+
 
 <script src="sw.js" charset="utf-8"></script>
 
