--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
 <script src="js/main.js" charset="utf-8"></script>
 
 
-<script src="sw.js" charset="utf-8"></script>
+<script src="cache.js" charset="utf-8"></script>
 
 
   </body>
