--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Currency</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+     <meta name="description" content="">
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/forerunnerdb/2.0.22/fdb-all.min.js"></script> -->
     <script type="application/javascript" src="js/fdb-all.min.js"></script>
 
