--- a/index.html
+++ b/index.html
@@ -711,6 +711,10 @@
 
            </table>
          </div>
+           <div class="" id="contact">
+           <p>Email: <i>damilolajerryhd@gmail.com</i></p>
+           <p>Phone: <i>07030995296 or 08157579566</i></p>
+         </div>
        </div>
      </div>
    </div>
